# names

./: .gitignore  compare_prevalance_of_top_100.py  estimate_age.py  find_prevalance_of_alternate_spellings.py  make_year_df.py  names.py  pyproject.toml  requirements.txt  streamlit_app.py  tragedeigh.py
birth_data/: NCHS_-_Births_and_General_Fertility_Rates__United_States_20250709.csv  United_States_(2025)_07-22-2025_1058_AM.csv  notes_about_birth_data.txt
names/: estimate_age.py  name_by_time.py  name_utils.py
pages/: Estimate_Age_By_Name.py  Top_Names_by_Year.py  name_popularity.py
