[tool.poetry]
name = "names"
version = "0.1.0"
description = ""
authors = ["Spencer Peterson <spencer9696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
plotly = "^6.0.1"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pathlib = "^1.0.1"
metaphone = "^0.6"
jellyfish = "^1.2.0"
streamlit = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
